--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons&display=block"
-      rel="stylesheet"
-    />
-    <title>Elwood Berry - Material Base</title>
-  </head>
-  <body class="mat-app-background">
-    <my-app>loading</my-app>
-    <span class="version-info">Current build: 12.1.0</span>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons&display=block" rel="stylesheet" />
+  <title>Elwood Berry - Material Base</title>
+</head>
+
+<body class="mat-app-background">
+  <my-app></my-app>
+</body>
+
 </html>
 
 <!-- 
